# sift-pdf

./: .gitignore  .spectral.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  openapi.yaml  usage.md
schemas/v1/: version.json
scripts/: consume_surface_audit.py
src/sift_pdf/: __init__.py  cache.py  cli.py  version.py
src/sift_pdf/api/: __init__.py  auth.py  main.py  middleware.py
src/sift_pdf/estimate/: __init__.py  api.py
src/sift_pdf/handoff/: __init__.py  compile.py
src/sift_pdf/schemas/: __init__.py  estimate.py  grouping.py  impose_plan.py  jobs.py  press.py
src/sift_pdf/solve/: __init__.py  api.py  engine.py  t1_grid.py  t1_repeat_snap.py  t2_gang.py  t3_nest.py
src/sift_pdf/suggest/: __init__.py  api.py
tests/: test_auth.py  test_availability.py  test_cache.py  test_cjd_handoff.py  test_cli.py  test_estimate_api.py  test_grouping.py  test_handoff.py  test_healthz.py  test_schemas.py  test_solve_api.py  test_suggest_api.py  test_t1_grid.py  test_t1_repeat_snap.py  test_t2_gang.py  test_t3_nest.py
